5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1573_1326.log
== TEST (2019-03-11 15:05:44) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:46) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.239172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:47) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.168626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:48) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.138266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:49) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.145053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:50) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:56) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:58) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.180748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:58) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf("40+35")
-- EXECUTION TIME:
0.134061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:02) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:03) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")

-- EXECUTION TIME:
0.124891
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:04) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:08) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:09) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- EXECUTION TIME:
0.19725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:10) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:28) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:29) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
 
-- EXECUTION TIME:
0.150039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:56) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf(40+35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:57) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf(40+35)
-- EXECUTION TIME:
0.16927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:59) 
-- CODE:
printf("Josigenes gastou 40")
printf("Jocasta gastou 35")
scanf(40+35)
-- EXECUTION TIME:
0.102759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Josigenes gastou 40")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:07:18) 
-- CODE:
printf(40+35)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf(40+35)
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:19) 
-- CODE:
printf(40+35)

-- EXECUTION TIME:
0.125506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf(40+35)
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:12:45) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
printf(40+35)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Sosígenes gastou 40 reais")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:12:46) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
printf(40+35)

-- EXECUTION TIME:
0.127879
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:15) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
scanf(40+35)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Sosígenes gastou 40 reais")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:13:15) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
scanf(40+35)

-- EXECUTION TIME:
0.132856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:13:16) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
scanf(40+35)

-- EXECUTION TIME:
0.103385
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:17) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
scanf(40+35)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Sosígenes gastou 40 reais")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:13:17) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")
scanf(40+35)

-- EXECUTION TIME:
0.138486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:20) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Sosígenes gastou 40 reais")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:21) 
-- CODE:
printf("Sosígenes gastou 40 reais")
printf("Jocasta gastou 35 reais")


-- EXECUTION TIME:
0.14203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:50) 
-- CODE:
printf("Sosígenes gastou 40 reais e Jocasta 35 reais")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("Sosígenes gastou 40 reais e Jocasta 35 reais")
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:51) 
-- CODE:
printf("Sosígenes gastou 40 reais e Jocasta 35 reais")



-- EXECUTION TIME:
0.148925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais e Jocasta 35 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:51) 
-- CODE:
printf("Sosígenes gastou 40 reais e Jocasta 35 reais")



-- EXECUTION TIME:
0.131855
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("Sos\xedgenes gastou 40 reais e Jocasta 35 reais")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:02) 
-- CODE:
print(40+35)




-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:04) 
-- CODE:
print(40+35)




-- EXECUTION TIME:
0.206937
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
